SERVER-63963 Rename local variables to address Coverity warnings